# fastfedi-template

./: .example.env  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile  worker.dockerfile
backend/app/: README.md  pyproject.toml  worker-start.sh
backend/app/alembic/versions/: 8bdea1b48f5d_first_revision.py  9f40b24a68be_activitystream_actor.py
backend/app/app/: initial_data.py  main.py
backend/app/app/api/: deps.py  signatures.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: creators.py  oauth.py  proxy.py  root.py  wellknown.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  crud_actor.py  crud_creator.py  crud_pub.py  crud_token.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/email-templates/src/: new_account.mjml  reset_password.mjml
backend/app/app/models/: __init__.py  actor.py  creator.py  token.py
backend/app/app/schema_types/: __init__.py  actor.py
backend/app/app/schemas/: __init__.py  actor.py  base_schema.py  creator.py  protocol.py  token.py
backend/app/app/schemas/activitypubdantic/: __init__.py  get_class.py  get_model.py
backend/app/app/schemas/activitypubdantic/models/: __init__.py  activity.py  actor.py  core.py  link.py  object.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
backend/app/app/tests/crud/: test_item.py  test_user.py
backend/app/app/tests/utils/: item.py  user.py  utils.py
backend/app/app/utilities/: __init__.py  email.py  regexes.py
backend/app/app/worker/: __init__.py
